--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://acrcane.github.io/my-pack/",
+  "homepage": "https://acrcane.github.io/neodentica_front-end",
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
@@ -26,7 +26,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
-    "gh-pages": "^6.1.1",
+    "gh-pages": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "react-refresh": "^0.14.2",
     "style-loader": "^4.0.0",
